--- a/MyWorkoutTestProject/Components/Welcome/View/WelcomeView.xib
+++ b/MyWorkoutTestProject/Components/Welcome/View/WelcomeView.xib
@@ -1,18 +1,91 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17125"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB">
+        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="WelcomeView" customModule="MyWorkoutTestProject" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-            <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+            <subviews>
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Myworkout-logo" translatesAutoresizingMaskIntoConstraints="NO" id="rkc-rt-EB6">
+                    <rect key="frame" x="135" y="133.5" width="105" height="100"/>
+                    <constraints>
+                        <constraint firstAttribute="width" secondItem="rkc-rt-EB6" secondAttribute="height" multiplier="21:20" id="6WA-0M-Gle"/>
+                    </constraints>
+                </imageView>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Myworkout GO" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gIp-Uj-jMK">
+                    <rect key="frame" x="112" y="248.5" width="151" height="29"/>
+                    <fontDescription key="fontDescription" name="AppleSDGothicNeo-Light" family="Apple SD Gothic Neo" pointSize="24"/>
+                    <nil key="textColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Start by entering your email address." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GwA-dT-X2O">
+                    <rect key="frame" x="48" y="279.5" width="279" height="22"/>
+                    <fontDescription key="fontDescription" name="AppleSDGothicNeo-Regular" family="Apple SD Gothic Neo" pointSize="18"/>
+                    <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Next-icon" translatesAutoresizingMaskIntoConstraints="NO" id="rMm-NS-yfg">
+                    <rect key="frame" x="305" y="595" width="25" height="22"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="25" id="yW3-2P-ef5"/>
+                    </constraints>
+                </imageView>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Next" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aSM-M0-s7n">
+                    <rect key="frame" x="248" y="591.5" width="47" height="29"/>
+                    <fontDescription key="fontDescription" name="AppleSDGothicNeo-Light" family="Apple SD Gothic Neo" pointSize="24"/>
+                    <color key="textColor" red="0.084818072620000004" green="0.73230260609999998" blue="0.78824758530000005" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Email address" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ZaJ-CK-XNc">
+                    <rect key="frame" x="33" y="515" width="309" height="25.5"/>
+                    <fontDescription key="fontDescription" name="AppleSDGothicNeo-Light" family="Apple SD Gothic Neo" pointSize="20"/>
+                    <textInputTraits key="textInputTraits"/>
+                </textField>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yeU-4d-wqp">
+                    <rect key="frame" x="33" y="548.5" width="309" height="1"/>
+                    <color key="backgroundColor" red="0.084818072620000004" green="0.73230260609999998" blue="0.78824758530000005" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="1" id="TMe-9b-v92"/>
+                    </constraints>
+                </view>
+            </subviews>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
+            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+            <constraints>
+                <constraint firstItem="yeU-4d-wqp" firstAttribute="top" secondItem="ZaJ-CK-XNc" secondAttribute="bottom" constant="8" id="0Sc-kt-Jxr"/>
+                <constraint firstItem="gIp-Uj-jMK" firstAttribute="centerX" secondItem="rkc-rt-EB6" secondAttribute="centerX" id="2ws-iG-ozf"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="rMm-NS-yfg" secondAttribute="trailing" constant="45" id="IpI-Lf-xGB"/>
+                <constraint firstItem="aSM-M0-s7n" firstAttribute="top" secondItem="yeU-4d-wqp" secondAttribute="bottom" constant="42" id="Iuj-vb-teU"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="rMm-NS-yfg" secondAttribute="bottom" constant="50" id="KFX-wM-zM6"/>
+                <constraint firstItem="rkc-rt-EB6" firstAttribute="height" secondItem="iN0-l3-epB" secondAttribute="height" multiplier="0.149925" id="PNq-aq-yF8"/>
+                <constraint firstItem="yeU-4d-wqp" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="33" id="TJv-xh-g2a"/>
+                <constraint firstItem="aSM-M0-s7n" firstAttribute="centerY" secondItem="rMm-NS-yfg" secondAttribute="centerY" id="U0X-pL-bSv"/>
+                <constraint firstItem="rkc-rt-EB6" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="WSl-iH-N7t"/>
+                <constraint firstItem="ZaJ-CK-XNc" firstAttribute="trailing" secondItem="yeU-4d-wqp" secondAttribute="trailing" id="Wxs-uv-emu"/>
+                <constraint firstItem="ZaJ-CK-XNc" firstAttribute="leading" secondItem="yeU-4d-wqp" secondAttribute="leading" id="Xeb-2n-H6m"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="yeU-4d-wqp" secondAttribute="trailing" constant="33" id="Xnn-Yi-7tk"/>
+                <constraint firstItem="gIp-Uj-jMK" firstAttribute="top" secondItem="rkc-rt-EB6" secondAttribute="bottom" constant="15" id="feO-Ul-hz7"/>
+                <constraint firstItem="GwA-dT-X2O" firstAttribute="top" secondItem="gIp-Uj-jMK" secondAttribute="bottom" constant="2" id="h4W-nb-vZP"/>
+                <constraint firstItem="GwA-dT-X2O" firstAttribute="centerX" secondItem="gIp-Uj-jMK" secondAttribute="centerX" id="jCp-W4-dJp"/>
+                <constraint firstItem="rMm-NS-yfg" firstAttribute="leading" secondItem="aSM-M0-s7n" secondAttribute="trailing" constant="10" id="lRH-7h-8GZ"/>
+                <constraint firstItem="rkc-rt-EB6" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" multiplier="0.55" id="miK-GN-Deo"/>
+            </constraints>
+            <point key="canvasLocation" x="-197.59999999999999" y="128.18590704647679"/>
         </view>
     </objects>
+    <resources>
+        <image name="Myworkout-logo" width="105" height="89"/>
+        <image name="Next-icon" width="22" height="22"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
