--- a/MyWorkoutTestProject/Components/SignUp/View/SignUpView.xib
+++ b/MyWorkoutTestProject/Components/SignUp/View/SignUpView.xib
@@ -53,9 +53,6 @@
                 </view>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BmG-Ib-eBh">
                     <rect key="frame" x="287" y="788" width="82" height="30"/>
-                    <connections>
-                        <action selector="didTapNextButton:" destination="pdn-nq-6DU" eventType="touchUpInside" id="Y5z-ru-PPz"/>
-                    </connections>
                 </button>
                 <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="zBi-Wu-1YN">
                     <rect key="frame" x="33" y="630.5" width="348" height="25.5"/>
@@ -122,6 +119,7 @@
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bMv-tE-2Rz">
                     <rect key="frame" x="45" y="788" width="100" height="30"/>
                     <connections>
+                        <action selector="didTapCancelButton:" destination="pdn-nq-6DU" eventType="touchUpInside" id="sfr-gU-F8D"/>
                         <action selector="didTapNextButton:" destination="pdn-nq-6DU" eventType="touchUpInside" id="Xll-MP-r7l"/>
                     </connections>
                 </button>
@@ -182,6 +180,10 @@
                 <constraint firstItem="cqk-ug-A6F" firstAttribute="centerX" secondItem="pdn-nq-6DU" secondAttribute="centerX" id="vxD-u3-tye"/>
                 <constraint firstItem="2wt-vm-3yM" firstAttribute="top" secondItem="Qbx-b8-SH9" secondAttribute="bottom" constant="42" id="x7e-ip-2uZ"/>
             </constraints>
+            <connections>
+                <outlet property="emailTextField" destination="pc7-nO-6Q7" id="3lM-a8-Uiy"/>
+                <outlet property="passwordTextField" destination="zBi-Wu-1YN" id="Z0m-Qo-33o"/>
+            </connections>
             <point key="canvasLocation" x="-198.55072463768118" y="127.90178571428571"/>
         </view>
     </objects>
