--- a/MyWorkoutTestProject/Components/SignUp/View/SignUpView.xib
+++ b/MyWorkoutTestProject/Components/SignUp/View/SignUpView.xib
@@ -38,8 +38,8 @@
                         <constraint firstAttribute="width" constant="25" id="cpa-An-KIV"/>
                     </constraints>
                 </imageView>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Next" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2wt-vm-3yM">
-                    <rect key="frame" x="287" y="788" width="47" height="30"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sign Up" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2wt-vm-3yM">
+                    <rect key="frame" x="257.5" y="788" width="76.5" height="30"/>
                     <fontDescription key="fontDescription" name="AppleSDGothicNeo-Light" family="Apple SD Gothic Neo" pointSize="24"/>
                     <color key="textColor" red="0.084818072620000004" green="0.73230260609999998" blue="0.78824758530000005" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                     <nil key="highlightedColor"/>
@@ -52,7 +52,7 @@
                     </constraints>
                 </view>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BmG-Ib-eBh">
-                    <rect key="frame" x="287" y="788" width="82" height="30"/>
+                    <rect key="frame" x="257.5" y="788" width="111.5" height="30"/>
                 </button>
                 <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="zBi-Wu-1YN">
                     <rect key="frame" x="33" y="630.5" width="348" height="25.5"/>
@@ -120,7 +120,7 @@
                     <rect key="frame" x="45" y="788" width="100" height="30"/>
                     <connections>
                         <action selector="didTapCancelButton:" destination="pdn-nq-6DU" eventType="touchUpInside" id="sfr-gU-F8D"/>
-                        <action selector="didTapNextButton:" destination="pdn-nq-6DU" eventType="touchUpInside" id="Xll-MP-r7l"/>
+                        <action selector="didTapSignUpButton:" destination="pdn-nq-6DU" eventType="touchUpInside" id="Xll-MP-r7l"/>
                     </connections>
                 </button>
                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Back-icon" translatesAutoresizingMaskIntoConstraints="NO" id="BV0-fz-Zad">
