--- a/MyWorkoutTestProject/Components/SignUp/View/SignUpView.xib
+++ b/MyWorkoutTestProject/Components/SignUp/View/SignUpView.xib
@@ -53,6 +53,9 @@
                 </view>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BmG-Ib-eBh">
                     <rect key="frame" x="260.5" y="788" width="108.5" height="30"/>
+                    <connections>
+                        <action selector="didTapSignUpButton:" destination="pdn-nq-6DU" eventType="touchUpInside" id="8uT-NK-jos"/>
+                    </connections>
                 </button>
                 <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="zBi-Wu-1YN">
                     <rect key="frame" x="33" y="630.5" width="348" height="25.5"/>
@@ -130,7 +133,6 @@
                     <rect key="frame" x="45" y="788" width="100" height="30"/>
                     <connections>
                         <action selector="didTapCancelButton:" destination="pdn-nq-6DU" eventType="touchUpInside" id="sfr-gU-F8D"/>
-                        <action selector="didTapSignUpButton:" destination="pdn-nq-6DU" eventType="touchUpInside" id="Xll-MP-r7l"/>
                     </connections>
                 </button>
                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Back-icon" translatesAutoresizingMaskIntoConstraints="NO" id="BV0-fz-Zad">
