--- a/MyWorkoutTestProject/Components/SignUp/View/SignUpView.xib
+++ b/MyWorkoutTestProject/Components/SignUp/View/SignUpView.xib
@@ -58,9 +58,9 @@
                     </connections>
                 </button>
                 <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="zBi-Wu-1YN">
-                    <rect key="frame" x="33" y="630.5" width="348" height="25.5"/>
+                    <rect key="frame" x="33" y="632" width="348" height="24"/>
                     <fontDescription key="fontDescription" name="AppleSDGothicNeo-Light" family="Apple SD Gothic Neo" pointSize="20"/>
-                    <textInputTraits key="textInputTraits"/>
+                    <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                 </textField>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1kx-L4-5vA">
                     <rect key="frame" x="33" y="664" width="348" height="1"/>
@@ -70,12 +70,12 @@
                     </constraints>
                 </view>
                 <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Email address" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="pc7-nO-6Q7">
-                    <rect key="frame" x="33" y="556" width="348" height="25.5"/>
+                    <rect key="frame" x="33" y="557.5" width="348" height="25.5"/>
                     <fontDescription key="fontDescription" name="AppleSDGothicNeo-Light" family="Apple SD Gothic Neo" pointSize="20"/>
                     <textInputTraits key="textInputTraits"/>
                 </textField>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Zoq-FG-Foy">
-                    <rect key="frame" x="33" y="589.5" width="348" height="1"/>
+                    <rect key="frame" x="33" y="591" width="348" height="1"/>
                     <color key="backgroundColor" red="0.084818072620000004" green="0.73230260609999998" blue="0.78824758530000005" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="1" id="Pgk-yB-SKA"/>
